Closed Bug 137178 Opened 24 years ago Closed 24 years ago

Outliner tree expanded by default, should not be

Categories

(SeaMonkey :: UI Design, defect, P1)

x86
Windows 2000
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: hjtoi-bugzilla, Assigned: samir_bugzilla)

References

Details

Attachments

(1 file)

Moving the patch from bug 124503 into here since it really is its own issue.
Will attach the patch next. Please get reviews etc. ASAP.
Blocks: 124503
Keywords: nsbeta1+
Priority: -- → P1
Target Milestone: --- → mozilla1.0
Comment on attachment 78968 [details] [diff] [review] Proposed fix from samir & varga sr=hewitt
Attachment #78968 - Flags: superreview+
Comment on attachment 78968 [details] [diff] [review] Proposed fix from samir & varga r=sgehani for Jan's version.
Attachment #78968 - Flags: review+
Status: NEW → ASSIGNED
Keywords: patch
Yeah, I modified Samir's patch a bit. Tested it with my tree content model testcase. Go ahead and check it in. Hmm, only summary doesn't look right for me This patch prevents insertion to a closed container.
Request to drivers for approval sent 2002-04-12 3:02 pm.
Comment on attachment 78968 [details] [diff] [review] Proposed fix from samir & varga a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #78968 - Flags: approval+
landed on the trunk and 1.0 branch
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
sarah, can you assign the correct qa person to verify this fix
QA Contact: paw → sairuh
shrir, would you mind verifying this?
QA Contact: sairuh → shrir
no problem sairoh, verif patches are in trunk n branch.
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
Component: XP Apps: GUI Features → UI Design
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: