Fix for bug 137178 - Outliner tree expanded by default, should not be. - prevent insertions to closed containers r=sgehani/varga, sr=hewitt, patch=sgehani,varga